<resources>
    <string name="app_name">Github User</string>
    <string name="user_github">Username</string>
    <string name="name_github">Name</string>
    <string name="detail_user">Detail User</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="search_hint">Input User Name</string>
    <string name="tab_text_1">FOLLOWER</string>
    <string name="tab_text_2">FOLLOWING</string>
    <string name="app_description">This application has functions to perform a User Github search and displays the details.\n Search for Github users using the Search button above.</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="favorite">Favorite</string>
    <string name="list_favorite_users">Favorite Users</string>
    <string name="reminder">Reminder at 9:00 AM</string>
    <string name="settings">Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="switch_off">Alarm switch off</string>
    <string name="switch_on">Alarm switch on</string>
    <string name="key_reminder">reminder</string>
    <string name="notif_message">Let\'s find popular user on Github</string>
    <string name="key_language">language</string>
</resources>


