<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/key_reminder"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/reminder"
        android:defaultValue="false"
        android:summaryOff="@string/switch_off"
        android:summaryOn="@string/switch_on"/>

    <Preference
        android:key="@string/key_language"
        android:icon="@drawable/ic_language_white_24dp"
        android:title="@string/change_language_settings">
        <intent
            android:targetClass="com.dicoding.helfani.mysubmissionfinal.activity.LanguageSetting"
            android:targetPackage="com.dicoding.helfani.mysubmissionfinal"/>
    </Preference>

</PreferenceScreen>